// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentViewer should render correctly for dev_tools subcategory 1`] = `
<div>
  <div
    class="css-1115lm6"
  >
    <div
      class="chakra-container css-1a9hjhw"
    >
      <div
        class="css-1f77ep"
      >
        <div
          class="chakra-stack css-10c7tj2"
        >
          <div
            class="chakra-stack css-1gptjxp"
          >
            <div
              class="chakra-stack css-1x0y7ph"
            >
              <a
                data-discover="true"
                href="/"
              >
                <p
                  class="css-y9x6a7"
                >
                  SYSTEM
                </p>
              </a>
              <p>
                /
              </p>
              <p
                class="css-1v8u59e"
              >
                dev_tools
              </p>
            </div>
            <button
              aria-label="Add to Favorites"
              class="chakra-button css-mlqauu"
              type="button"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; font-variation-settings: "FILL" 0;"
              >
                star
              </span>
            </button>
          </div>
          <p
            class="css-wqbqv0"
          >
            Deep dive into the dev_tools ecosystem.
          </p>
          <div
            class="css-1fxghji"
          >
            <div
              class="chakra-stack css-oscz95"
            >
              <p
                class="css-1mgf822"
              >
                The curated directory for
                 
                <b>
                  dev_tools
                </b>
                 
                is currently in synchronization. Our engineers are finalizing the integration of industrial-grade resources, architectural patterns, and performance-optimized frameworks.
              </p>
              <div
                class="css-18ek48u"
              >
                <p
                  class="css-1o3rymz"
                >
                  STATUS: SYNCHRONIZING_CONTENT
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentViewer should render correctly for streaming subcategory 1`] = `
<div>
  <div
    class="css-1115lm6"
  >
    <aside
      class="css-11qsya6"
    >
      <div
        class="css-1ts0ngf"
      >
        <p
          class="css-gvuzmc"
        >
          Media
        </p>
        <p
          class="css-10n9ze3"
        >
          SYSTEM LIBRARIES
        </p>
      </div>
      <div
        class="chakra-stack css-11np1li"
      >
        <a
          aria-current="page"
          class="active"
          data-discover="true"
          href="/media/streaming"
          style="text-decoration: none;"
        >
          <div
            class="css-1amsbtd"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 18px; opacity: 1;"
            >
              play_circle
            </span>
            <p
              class="css-1jm8lwb"
            >
              Streaming Sites
            </p>
          </div>
        </a>
        <a
          class=""
          data-discover="true"
          href="/media/live-sport"
          style="text-decoration: none;"
        >
          <div
            class="css-7ctwjg"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 18px; opacity: 0.7;"
            >
              sports_soccer
            </span>
            <p
              class="css-1n4ep0s"
            >
              Live Sports
            </p>
          </div>
        </a>
        <a
          class=""
          data-discover="true"
          href="/media/download-sites"
          style="text-decoration: none;"
        >
          <div
            class="css-7ctwjg"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 18px; opacity: 0.7;"
            >
              download
            </span>
            <p
              class="css-1n4ep0s"
            >
              Download Sites
            </p>
          </div>
        </a>
        <a
          class=""
          data-discover="true"
          href="/media/torrent"
          style="text-decoration: none;"
        >
          <div
            class="css-7ctwjg"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 18px; opacity: 0.7;"
            >
              file_download
            </span>
            <p
              class="css-1n4ep0s"
            >
              Torrent Sites
            </p>
          </div>
        </a>
        <a
          class=""
          data-discover="true"
          href="/media/subtitle-tools"
          style="text-decoration: none;"
        >
          <div
            class="css-7ctwjg"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 18px; opacity: 0.7;"
            >
              subtitles
            </span>
            <p
              class="css-1n4ep0s"
            >
              Subtitle Tools
            </p>
          </div>
        </a>
        <a
          class=""
          data-discover="true"
          href="/media/media-tracking"
          style="text-decoration: none;"
        >
          <div
            class="css-7ctwjg"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 18px; opacity: 0.7;"
            >
              analytics
            </span>
            <p
              class="css-1n4ep0s"
            >
              Media Tracking
            </p>
          </div>
        </a>
        <a
          class=""
          data-discover="true"
          href="/media/misc"
          style="text-decoration: none;"
        >
          <div
            class="css-7ctwjg"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 18px; opacity: 0.7;"
            >
              more_horiz
            </span>
            <p
              class="css-1n4ep0s"
            >
              Miscellaneous
            </p>
          </div>
        </a>
      </div>
    </aside>
    <div
      class="chakra-container css-1a9hjhw"
    >
      <div
        class="css-1f77ep"
      >
        <div
          class="chakra-stack css-10c7tj2"
        >
          <div
            class="chakra-stack css-1gptjxp"
          >
            <div
              class="chakra-stack css-1x0y7ph"
            >
              <a
                data-discover="true"
                href="/"
              >
                <p
                  class="css-y9x6a7"
                >
                  SYSTEM
                </p>
              </a>
              <p>
                /
              </p>
              <a
                data-discover="true"
                href="/media"
              >
                <p
                  class="css-253glj"
                >
                  Media
                </p>
              </a>
              <p>
                /
              </p>
              <p
                class="css-1v8u59e"
              >
                Streaming Sites
              </p>
            </div>
            <button
              aria-label="Add to Favorites"
              class="chakra-button css-mlqauu"
              type="button"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; font-variation-settings: "FILL" 0;"
              >
                star
              </span>
            </button>
          </div>
          <p
            class="css-wqbqv0"
          >
            Free movie, TV show, and anime streaming platforms.
          </p>
          <div
            class="css-qs0ke5"
          >
            <div
              class="chakra-stack css-1cihsba"
            >
              <span
                class="chakra-spinner css-1i9lbwu"
              />
              <p
                class="css-12nx1bf"
              >
                LOADING_DOCUMENTATION...
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
